<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasilApp1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username/E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot the Password</string>
    <string name="register">Register</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="login_using">login using</string>
    <string name="password_sent_to_email">Password sent to your email</string>
    <string name="ok">OK</string>
    <string name="places">Places</string>
    <string name="no_place_added">It seems there is no smart home or office in your name</string>
    <string name="add_place_button">Add a place</string>
    <string name="log_out">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="give_place_name">Give a name to your place (e.g. home/office etc.)</string>
    <string name="refresh">Refresh</string>
    <string name="add_device">Add Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="home">HOME</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="rename">Rename</string>
    <string name="schedule_appliances">Schedule Appliances</string>
    <string name="general">General</string>
    <string name="manage_permissions">Manage Permissions</string>
    <string name="account_settings">Account Settings</string>
    <string name="sound">Sound</string>
    <string name="emergency">Emergency</string>
    <string name="about">About</string>
    <string name="country">Country</string>
    <string name="network">Network</string>
    <string name="fire">Fire</string>
    <string name="gas_leak">Gas leak</string>
    <string name="intrusion">Intrusion</string>
    <string name="notification">Notification</string>
    <string name="fire_emergency_contact_no">Fire emergency contact no.</string>
    <string name="retype_passowrd">Retype password</string>

</resources>